--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
 #mysql connectivity
-
+spring.datasource.url=jdbc:mysql://localhost:3306/sample?createDatabaseIfNotExist
 
