--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
 #mysql connectivity
-spring.datasource.url=jdbc:mysql://localhost:3306/sample?createDatabaseIfNotExist
+spring.datasource.url=jdbc:mysql://localhost:3306/sample?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.Driver
 
