--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sample?createDatabaseIfNotExis
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.Driver
+#hibernate connectivity
+spring.jpa.hibernate.ddl
 
