--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,8 @@ spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.Driver
 #hibernate connectivity
-spring.jpa.hibernate.ddl
+spring.jpa.hibernate.ddl-auto=update
+spring.
+spring.jpa.properties.hibernate.format_sql=true
+
 
